@@ -5,6 +5,7 @@ Added ZSF support for Timex TS2068
 
 Improved ZX Spectrum Next emulation: added sprite rendering priority bit
 Improved ZRCP: allow to change command prompt
+Improved SmartLoad & Drag-Drop: allow to load a .rom file as a custom rom file for the current machine
 
 Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
 Fixed .Z80 Timex TS2068 snapshot loading
